--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ag-grid-community": "^29.1.0",
     "ag-grid-react": "^29.1.0",
     "axios": "^1.3.5",
+    "framer-motion": "^10.12.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
