--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.1.0",
     "ag-grid-react": "^29.1.0",
-    "axios": "^1.3.5",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.12",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
