--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "ag-grid-react": "^29.1.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.12",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-copy-text": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
